--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ main section {
 
 .constrained-width {
     margin: auto;
-    width: 1000px;
+    max-width: 1000px;
 }
 
 .logo.medium {
@@ -46,4 +46,8 @@ main section {
 
 .button-delay {
     animation-delay: 300ms;
+}
+
+img {
+    max-width: 100vw;
 }
